# docker-pgxn-tools

./: Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  cicd.yml  publish.yml
test/: .gitattributes  Makefile  runtest.sh
test/pgrx/: .gitignore  Cargo.toml  Makefile  hello.control  runtest.sh
test/pgrx/results/: base.out
test/pgrx/src/: lib.rs
test/pgrx/test/sql/: base.sql
test/pgxs/: META.json  Makefile  no_cluster_test.sh  runtest.sh  widget.control  widget.sql
test/pgxs/test/expected/: base.out
test/test/sql/: base.sql
